# agent

./: .env.example  .gitignore  Job Agent Presentation (3).pptx  Job Agent Presentation.pptx  Job Agent.command  README.md  app.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: PROJECT_GUIDE.html
job_agent/: __init__.py  agent.py  autofill.py  cli.py  company_directory.py  config.py  generate.py  github_import.py  llm.py  matching.py  pdfgen.py  profile_store.py  scraper.py  tools.py  tracker.py  util.py  web.py
job_agent/static/: app.js  catalogs.js  index.html  style.css
presentation/: Job Agent Presentation.pptx  build_pptx.py  slides.html
tests/: e2e_test.py
